Websocket with reconnecting, update all on reconnect, update songs list now working
